--- a/views/tmpl/forgot-password.html
+++ b/views/tmpl/forgot-password.html
@@ -27,3 +27,23 @@
 		</div>
 	</div>	
 </section>
+<script type="text/javascript">
+	$(document).ready(function() {
+		var winw = $(window).width();
+	    var winh = $(window).height();
+		
+		$(window).on('resize',function(){location.reload();});
+		
+		if(winh>449 && winw > 1139) {
+			var popuph = document.getElementById('hpopup').offsetHeight;
+			var mtop = popuph - 45;
+			$('.w-450').css({
+				'position' : 'absolute',
+				'left' : '50%',
+				'top' : '50%',	        
+				'margin-top' : -mtop/2,
+				'margin-left' : -30,
+			});
+		}
+	});
+</script>
