--- a/views/tmpl/admin/dashboard.html
+++ b/views/tmpl/admin/dashboard.html
@@ -29,36 +29,29 @@
 			</div>
 			<div class="devices card-container col-sm-4 col-md-3">
 				<div class="card">
-					<div class="front bg-blue cardheight">
+					<a ui-sref="app.admin.device.devices">
+					<div class="noback bg-blue cardheight">						
 						<div class="row">
 							<div class="col-xs-6 ta-r">
 								<div class="iconbx">
 									<img src="images/device-icon.png" alt="">
 								</div>
 							</div>
-							<div class="col-xs-6">
-								<div class="itxt">
+							<div class="col-xs-6">	
+								<div class="itxt">							
 									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.primary_device + dashboardData.dependent_device}}</p>
 									<span class="text-lg">Devices</span>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="back bg-blue">
-						<div class="row">
-							<div class="col-xs-6">
-								<a ui-sref="app.admin.device.devices"><img src="images/device-icon.png" alt=""><br/>{{dashboardData.primary_device}} Primary</a>
-							</div>
-							<div class="col-xs-6">
-								<a ui-sref="app.admin.device.dependent-devices"><img src="images/dependent-device-icon.png" alt=""><br/>{{dashboardData.dependent_device}} Dependent</a>
-							</div>
-						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 			<div class="users card-container col-sm-4 col-md-3">
 				<div class="card">
-					<div class="front bg-lightred cardheight">
+					<a ui-sref="app.admin.user.users">
+					<div class="noback bg-lightred cardheight">						
 						<div class="row">
 							<div class="col-xs-6 ta-r">
 								<div class="iconbx">
@@ -66,52 +59,35 @@
 								</div>
 							</div>
 							<div class="col-xs-6">
-								<div class="itxt">
+								<div class="itxt">								
 									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
 									<span class="text-lg">Users</span>
-								</div>
+								</div>	
 							</div>
 						</div>
 					</div>
-					<div class="back bg-lightred">
-						<div class="row">
-							<div class="col-xs-6">
-								<a ui-sref="app.admin.user.users"><img src="images/users-icon.png" alt=""><br/>Users</a>
-							</div>
-							<div class="col-xs-6">
-								<a ui-sref="app.admin.user.user-groups"><img src="images/user-groups-icon.png" alt=""><br/>User Groups</a>
-							</div>
-						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 			<div class="doors card-container col-sm-4 col-md-3">
 				<div class="card">
-					<div class="front bg-slategray lt cardheight">
+					<a ui-sref="app.admin.door.doors">
+					<div class="noback bg-slategray lt cardheight">						
 						<div class="row">
 							<div class="col-xs-6 ta-r">
 								<div class="iconbx">
 									<img src="images/doors-icon.png" alt="">
 								</div>
 							</div>
-							<div class="col-xs-6">
-								<div class="itxt">
+							<div class="col-xs-6">	
+								<div class="itxt">							
 									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.door}}</p>
 									<span class="text-lg">Doors</span>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="back bg-slategray">
-						<div class="row">
-							<div class="col-xs-6">
-								<a ui-sref="app.admin.door.doors"><img src="images/doors-icon.png" alt=""><br/>Doors</a>
-							</div>
-							<div class="col-xs-6">
-								<a ui-sref="app.admin.door.door-groups"><img src="images/door-groups-icon.png" alt=""><br/>Door Groups</a>
-							</div>
-						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 			<div class="cameradvr card-container col-sm-4 col-md-3 mb-10">
