--- a/views/tmpl/login.html
+++ b/views/tmpl/login.html
@@ -22,14 +22,14 @@
 				<div style="font-size: 16px; text-align: left; margin: -15px 0 0; color: #ff0000;">{{message}}</div>
 				
 				<div class="form-group text-left mt-20 mb-0">        
-					<label class="checkbox checkbox-custom checkbox-custom-sm inline-block" style="font-weight: 400; font-size: 16px;">
-						<input type="checkbox" ng-model="rememberme"><i></i> Remember me
+					<label class="checkbox checkbox-custom-alt inline-block" style="font-weight: 400;">
+						<input type="checkbox"><i></i> Remember me
 					</label>
 					<a ui-sref="core.forgot-password" class="pull-right mt-10" style="font-weight: 400; font-size: 16px; color:#0eba8c;">Forgot Password?</a><br/>
 					<button type="submit" class="btn btn-grey b-0 br-2 mt-40 m-0-auto" ng-click="loginFunction()" ng-disabled='form.$invalid'>GO</button>
 				</div>
 			</form>
-			<div class="bg-slategray dker seagreen wrap-reset negmargin40 mt-20">
+			<div class="bg-slategray dker seagreen wrap-reset negmargin40 mt-40">
 				<p class="m-0"><a ui-sref="core.signup">Register a new membership</a></p>
 			</div>
 		</div>
