--- a/views/tmpl/admin/support/technician.html
+++ b/views/tmpl/admin/support/technician.html
@@ -56,7 +56,7 @@
 																	</div>
 																	<div class="col-sm-6 col-md-6">																		
 																		<label for="">Phone Number <span class="text-danger">*</span><small>(+19876543210)</small> </label>
-																		<input type="text" name="" id="" class="form-control" placeholder="" ng-model="addTechnician.phone_number" pattern="^\+[1-9]{1}[0-9]{3,14}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}" required="required" aria-required="true" aria-invalid="true" style="">
+																		<input type="text" name="" id="" class="form-control" placeholder="" ng-model="addTechnician.phone_number" maxlength="15" required="required" style="">
 																	</div>
 																</div>
 																<div class="form-group row">																	
