Remove action item from view user

--- a/views/tmpl/admin/user/view-user.html
+++ b/views/tmpl/admin/user/view-user.html
@@ -185,7 +185,7 @@
 																	<th>Access Code</th>
 																	<th width="475">Assigned Doors</th>
 																	<th>Status</th>
-																	<th width="75">Action</th>
+																	<!--<th width="75">Action</th>-->
 																</tr>
 															</thead>
 															<tbody style="font-size:14px;">
@@ -199,10 +199,10 @@
 																		<!--</select>-->
 																		{{accesscode.status==0?'Inactive':'Active'}}
 																	</td>
-																	<td class="credintialicon">
+																	<!--<td class="credintialicon">
 																		<a href="" uib-tooltip="Edit"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
 																		<a href="" ng-click="removeCredential(accesscode.Credential_Id, 'access_code')" uib-tooltip="Remove"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
-																	</td>
+																	</td>-->
 																</tr>
 															</tbody>
 														</table>
@@ -251,7 +251,7 @@
 																	<th width="325">Assigned Doors</th>
 																	<th>Phone Number</th>
 																	<th>Status</th>
-																	<th width="75">Action</th>
+																	<!--<th width="75">Action</th>-->
 																</tr>
 															</thead>
 															<tbody style="font-size:14px;">
@@ -266,10 +266,10 @@
 																		<!--</select>-->
 																		{{phone_code.status==0?'Inactive':'Active'}}
 																	</td>
-																	<td class="credintialicon">
+																	<!--<td class="credintialicon">
 																		<a href="" uib-tooltip="Edit"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
 																		<a href="" ng-click="removeCredential(phone_code.Credential_Id, 'phone_code')" uib-tooltip="Remove"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
-																	</td>
+																	</td>-->
 																</tr>
 															</tbody>
 														</table>
@@ -315,7 +315,7 @@
 																	<th>Facility Code</th>
 																	<th width="325">Assigned Doors</th>
 																	<th>Status</th>
-																	<th width="75">Action</th>
+																	<!--<th width="75">Action</th>-->
 																</tr>
 															</thead>
 															<tbody style="font-size:14px;">
@@ -330,10 +330,10 @@
 																		<!--</select>-->
 																		{{rfid_code.status==0?'Inactive':'Active'}}
 																	</td>
-																	<td class="credintialicon">
+																	<!--<td class="credintialicon">
 																		<a href="" uib-tooltip="Edit"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
 																		<a href="" ng-click="removeCredential(rfid_code.Credential_Id, 'rfid_code')" uib-tooltip="Remove"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
-																	</td>
+																	</td>-->
 																</tr>
 															</tbody>
 														</table>
@@ -375,7 +375,7 @@
 																	<th>NFC Code</th>
 																	<th width="425">Assigned Doors</th>
 																	<th>Status</th>
-																	<th width="75">Action</th>
+																	<!--<th width="75">Action</th>-->
 																</tr>
 															</thead>
 															<tbody style="font-size:14px;">
@@ -389,10 +389,10 @@
 																		<!--</select>-->
 																		{{nfccode.status==0?'Inactive':'Active'}}
 																	</td>
-																	<td class="credintialicon">
+																	<!--<td class="credintialicon">
 																		<a href="" uib-tooltip="Edit"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
 																		<a href="" ng-click="removeCredential(nfccode.Credential_Id, 'nfc_code')" uib-tooltip="Remove"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
-																	</td>
+																	</td>-->
 																</tr>
 															</tbody>
 														</table>
@@ -439,7 +439,7 @@
 																	<th>Password</th>
 																	<th width="325">Assigned Doors</th>
 																	<th>Status</th>
-																	<th width="75">Action</th>
+																	<!--<th width="75">Action</th>-->
 																</tr>
 															</thead>
 															<tbody style="font-size:14px;">
@@ -454,10 +454,10 @@
 																		<!--</select>-->
 																		{{blecode.status==0?'Inactive':'Active'}}
 																	</td>
-																	<td class="credintialicon">
+																	<!--<td class="credintialicon">
 																		<a href="" uib-tooltip="Edit"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
 																		<a href="" ng-click="removeCredential(blecode.Credential_Id, 'ble_code')" uib-tooltip="Remove"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
-																	</td>
+																	</td>-->
 																</tr>
 															</tbody>
 														</table>
